[gd_scene load_steps=14 format=3 uid="uid://b25721k0oqnlb"]

[ext_resource type="Script" path="res://Scenes/Worlds/main_menu.gd" id="1_07mw3"]
[ext_resource type="FontFile" uid="uid://cikbh0cijo3yi" path="res://Fonts/cyberformhalf.ttf" id="1_ix8f7"]
[ext_resource type="FontFile" uid="uid://c76krp3u68v8j" path="res://Fonts/Cyberfall Italic.otf" id="2_xlx0f"]
[ext_resource type="Texture2D" uid="uid://ntptst52fu81" path="res://icons/7ddc6769-3759-4691-97e3-3555e34b3367.webp" id="4_asrc3"]
[ext_resource type="AudioStream" uid="uid://43my1d6prcwm" path="res://audio/Main Menu.ogg" id="5_xuwlm"]
[ext_resource type="PackedScene" uid="uid://brobgr6w8iunf" path="res://Scenes/Transition/transition.tscn" id="6_tbhif"]

[sub_resource type="FontVariation" id="FontVariation_eftnw"]
base_font = ExtResource("1_ix8f7")

[sub_resource type="FontVariation" id="FontVariation_26gi0"]
base_font = ExtResource("2_xlx0f")

[sub_resource type="FontVariation" id="FontVariation_wxbue"]
base_font = ExtResource("2_xlx0f")

[sub_resource type="FontVariation" id="FontVariation_q3ytf"]
base_font = ExtResource("2_xlx0f")

[sub_resource type="Animation" id="Animation_uv3rf"]
resource_name = "fade_error"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ErrorLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_voa73"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ErrorLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_60gsq"]
_data = {
"RESET": SubResource("Animation_voa73"),
"fade_error": SubResource("Animation_uv3rf")
}

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 157.0
offset_top = 337.0
offset_right = -623.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00552, 1.03959)
script = ExtResource("1_07mw3")

[node name="7Ddc6769-3759-4691-97e3-3555e34b3368" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(638.476, 227.974)
scale = Vector2(1.14467, 1.07512)
texture = ExtResource("4_asrc3")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -459.987
offset_top = -397.554
offset_right = 108.013
offset_bottom = -339.554
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_eftnw")
theme_override_font_sizes/font_size = 56
text = "Terminal Breach"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="Button" parent="."]
layout_mode = 0
offset_left = 1292.86
offset_top = 512.702
offset_right = 1434.87
offset_bottom = 541.702
theme_override_fonts/font = SubResource("FontVariation_26gi0")
text = "Credits"

[node name="?" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -156.138
offset_top = 510.778
offset_right = -140.138
offset_bottom = 541.778
text = "?"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xuwlm")
autoplay = true
parameters/looping = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -334.0
offset_bottom = 193.0
grow_horizontal = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SinglePlayer" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_26gi0")
text = "Single Player"

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xlx0f")

text = "Host Game"


[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xlx0f")

text = "Join Game"


[node name="AddressEntry" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xlx0f")
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_wxbue")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_q3ytf")
text = "Quit"

[node name="Transition" parent="." instance=ExtResource("6_tbhif")]
visible = false
position = Vector2(-74.5884, -258.756)

[node name="ErrorLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 369.958
offset_top = -67.3342
offset_right = 886.958
offset_bottom = -44.3342
theme_override_fonts/font = ExtResource("2_xlx0f")
theme_override_font_sizes/font_size = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_60gsq")
}

[connection signal="button_down" from="Credits" to="." method="_on_credits_button_down"]
[connection signal="button_down" from="?" to="." method="_on__button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/SinglePlayer" to="." method="_on_single_player_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
